--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -1,6 +1,10 @@
 <div class="chat-stream">
   <ul>
-    <li ng-repeat="msg in messages">{{msg}}</li>
+    <li ng-if="noHistory">{{noHistory}}</li>
+    <li ng-repeat="msg in messages track by $index ">{{msg}}</li>
   </ul>
-  <input type="text" ng-model="msg"/>
+  <form>
+    <input type="text" ng-model="newMessage" placeholder="Enter msg here ..."/>
+    <input type="submit" ng-click="addMessage()" value="Send"/>
+  </form>
 </div>
