--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -1,6 +1,6 @@
 <div class="chat-stream">
   <ul>
-    <li ng-repeat="msg in messages track by $index ">{{msg}}</li>
+    <li ng-repeat="msg in messages track by $index "><div class="bubble-{{msg.position}}">{{msg.text}}</div></li>
   </ul>
   <form>
     <input type="text" ng-model="newMessage" placeholder="Enter msg here ..."/>
