added drag-drop func

--- a/app/views/temp-chat/chat.html
+++ b/app/views/temp-chat/chat.html
@@ -88,6 +88,10 @@
     top: -110px;
     background: snow;
   }
+
+  .disabled {
+    opacity: 0.2;
+  }
 </style>
 
 <div class="container" ng-controller="ChatMainTempCtrl">
