--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -3,6 +3,7 @@
     <li ng-repeat="msg in messages track by $index" class="msg-container">
       <div class="msg-details {{msg.position}}">
         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        {{msg.user}}
       </div>
       <div class="bubble bubble-{{msg.position}}" chat-msg-draggable>{{msg.text | codeFormatter}} <span class="msg-time">{{msg.time}}</span></div>
     </li>
